# c-woomer

./: CMakeLists.txt  README.md
shaders/: spotlight.fs
src/: main.c
